compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__field_not_in_any_variant.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Person {\n    Teacher(name: String, age: Int, title: String)\n    Student(name: String, age: Int)\n}\npub fn get_height(person: Person) { person.height }"
---
error: Unknown record field
  ┌─ /src/one/two.gleam:6:37
  │
6 │ pub fn get_height(person: Person) { person.height }
  │                                     ^^^^^^^^^^^^^ Did you mean `age`?

The value being accessed has this type:

    Person

It has these fields:

    .age
    .name

